[tool.poetry]
name = "pipen-report"
version = "0.12.6"
description = "Report generation system for pipen"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pipen-report"
repository = "https://github.com/pwwang/pipen-report"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.8"
pipen = "^0.10"
Markdown = "^3"
copier = "^8.1"
# copier 8.1 only requires pydantic 1.10.2
# but 1.10.7- doesn't work in python3.9
# see: https://github.com/copier-org/copier/issues/1273
# here we simply just require a higher version of pydantic
pydantic = "^1.10.8"
python-slugify = "^8.0.1"
pipen-runinfo = {optional = true, version = "^0.2"}

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"
pytest-xdist = "^2"
pytest-forked = "^1"
pipen-filters = "^0.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins.pipen]
report = "pipen_report.report_plugin:PipenReport"

[tool.poetry.plugins.pipen_cli]
cli-report = "pipen_report.cli:PipenCliReport"

[tool.pytest.ini_options]
addopts = "-vv -n auto -p no:asyncio -W error::UserWarning --cov-config=.coveragerc --cov=pipen_report --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
filterwarnings = [
    "ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning",
]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "import"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
