[tool.poetry]
name = "pipen-report"
version = "0.23.6"
description = "Report generation system for pipen"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pipen-report"
repository = "https://github.com/pwwang/pipen-report"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.9"
pipen = "0.17.*"
Markdown = "^3"
copier = "^9"
python-slugify = "^8.0"
pipen-runinfo = { optional = true, version = "^0.9" }
imagesize = "^1.4"

[tool.poetry.extras]
runinfo = ["pipen-runinfo"]

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = "^6"
pytest-xdist = "^3"
pytest-forked = "^1"
pipen-filters = "^0.15"
pipen-gcs = "^0.2"
pipen-verbose = "^0.14"
pillow = "^11"
python-dotenv = "^1"
cloudsh = "^0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-rtd = "^0.0"
pymdown-extensions = "10.*"
mkapi-fix = "^0.1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins.pipen]
report = "pipen_report.report_plugin:PipenReport"

[tool.poetry.plugins.pipen_cli]
cli-report = "pipen_report.cli:PipenCliReport"

[tool.pytest.ini_options]
addopts = "-vv -n auto -p no:asyncio -W error::UserWarning --cov-config=.coveragerc --cov=pipen_report --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
filterwarnings = [
    "ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning",
    "ignore:.+may lead to deadlocks in the child:DeprecationWarning",

]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "import"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
